@@ -1,0 +1,1 @@
+usr/bin/nova-api-ec2
