@@ -1,0 +1,18 @@
+description "Nova EC2 API server"
+author "Joe Heck <heckj@mac.com>"
+
+start on (filesystem and net-device-up IFACE!=lo)
+stop on runlevel [016]
+
+
+chdir /var/run
+
+pre-start script
+	mkdir -p /var/run/nova
+	chown nova:root /var/run/nova/
+
+	mkdir -p /var/lock/nova
+	chown nova:root /var/lock/nova/
+end script
+
+exec su -s /bin/sh -c "exec nova-api-ec2 --flagfile=/etc/nova/nova.conf" nova
